[package]
name = "tweeter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
base64 = "0.13.1"
chrono = "0.4.21"
dotenv = "0.15.0"
envy = "0.4.2"
percent-encoding = "2.1.0"
rand = "0.8.5"
reqwest = { version = "0.11.12", features = ["json"] }
rust-crypto = "0.2.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.19.2", features = ["full"] }
url = "2.3.1"
